[tool.poetry]
name = "2025-p2-mitch-manning"
version = "0.1.0"
description = ""
authors = ["Mitch Manning <s4532126@uq.edu.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"